--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -12,7 +12,7 @@
     font-size: 1rem;
   }
   .navbar-nav .nav-link.active {
-    border-bottom: 2px solid purple;
+    border:none
   }
   .navbar-nav .dropdown-menu {
     background-color: whitesmoke
@@ -29,4 +29,29 @@
   .navbar-toggler-icon {
     background-color: #fff; /* Toggler icon color */
   }
-  
+  #header-prop-title{
+    margin: 2px;
+    animation: transform 10s ease-in-out;
+  }
+  #header-prop-title:hover{
+    transform: scale(1.1,1.1);
+    box-shadow: 0.2em 0.2em 0.2em #7f7c8c;
+    border-radius: 5%;
+  }
+
+  #header-home{
+    padding: 0.5em;
+  }
+
+  .nav-item{
+    animation: transform 1s ease-in-out;
+  }
+  .nav-item:hover{
+    transform: scale(1.2);
+  }
+  .header-p{
+    animation: transform 1s ease-in-out;
+  }
+  .header-p:hover{
+    color: blue;
+  }
