--- a/src/components/styles/item.css
+++ b/src/components/styles/item.css
@@ -21,4 +21,15 @@
   position: absolute;
   left: 0;
 }
+
+.item-container{
+  /* width: auto; */
+  width: 50%;
+  height: auto;
+  padding: 1rem;
+  background-color: transparent;
+  border-radius: 2rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  text-align: left;
+}
   
