--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -75,3 +75,42 @@ body {
   .home-p{
     line-height: 200%;
   }
+  .code-profile-div {
+    width: auto;
+    padding: 1%;
+    border: 2px solid #3f1960;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    animation: transform 1s ease-in-out;
+    transition: transform 0.3s ease-in-out, border-color 0.3s ease-in-out, border-style 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.code-profile-div:hover {
+    transform: scale(1.05);
+    border-color: #546f9a;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+@keyframes transform {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+a.code-profile-div-anchor {
+  color: #3f1960;
+  text-decoration: none;
+  border-bottom: 2px solid transparent;
+  transition: color 0.3s ease-in-out, border-bottom-color 0.3s ease-in-out;
+}
+
+a.code-profile-div-anchor:hover {
+  color: #303842;
+}
+
+
