--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -1,43 +1,28 @@
+#header-container{
+  background-color: #f8f9fa;
+}
 /* Style the navbar container */
-.d-flex {
-    background-color: transparent;
-    /* padding:  0; */
-  }
-  .navbar-brand {
-    color: #040000;
-    font-size: 1.5rem;
-  }
   .navbar-nav .nav-link {
     margin: 0 15px;
-    font-size: 1rem;
+    font-size: 1.25rem;
   }
   .navbar-nav .nav-link.active {
     border:none
   }
-  .navbar-nav .dropdown-menu {
-    background-color: whitesmoke
+  #header-title{
+    color: #3498db;
+    text-decoration: none;
+    transition-property: color;
+    transition-duration: .5s;
+    transition-timing-function: ease-in-out;
   }
-  .navbar-nav .dropdown-menu .dropdown-item {
-    color: black; /* Text color */
+  #header-title:hover{
+    color: #e74c3c;
   }
-  .navbar-nav .dropdown-menu .dropdown-item:hover {
-    background-color: #555; /* Background color on hover */
-    color: #fff; /* Text color on hover */
+  #header-title:focus{
+    text-decoration: underline;
   }
-  
-  /* Style the toggler icon color */
-  .navbar-toggler-icon {
-    background-color: #fff; /* Toggler icon color */
-  }
-  #header-prop-title{
-    margin: 2px;
-    animation: transform 10s ease-in-out;
-  }
-  #header-prop-title:hover{
-    transform: scale(1.1,1.1);
-    box-shadow: 0.2em 0.2em 0.2em #7f7c8c;
-    border-radius: 5%;
-  }
+
 
   #header-home{
     padding: 0.5em;
@@ -48,17 +33,17 @@
     transition: transform 0.3s ease-in-out;
   }
   .nav-item:hover{
-    transform: scale(1.2);
+    /* transform: scale(1.2); */
   }
   @keyframes transform {
     0% {
-        transform: scale(1);
+        /* transform: scale(1); */
     }
     50% {
-        transform: scale(1.1);
+        /* transform: scale(1.1); */
     }
     100% {
-        transform: scale(1.2);
+        /* transform: scale(1.2); */
     }
 }
   .header-p{
@@ -67,3 +52,31 @@
   .header-p:hover{
     color: blue;
   }
+  .header-container-home-link{
+    text-decoration: none;
+    color: black;
+    transition: transform 0.4s ease-in-out;
+    display: inline-block;
+  }
+  .header-container-home-link:hover{
+    /* transform: scale(1.1); */
+    color: rgb(52, 152, 219);
+  }
+  @media screen and (max-width:991px) {
+    #navbarSupportedContent{
+      width: auto;
+      height: auto;
+      position:absolute;
+      right: 2%;
+      top: 100%;
+      background-color: rgb(52, 152, 219,0.7);
+      font-size: small;
+      border-radius: 10px;
+      border-top-right-radius: 0;
+    }
+    .nav-link-item{
+      font-size: small;
+      color: white;
+    }
+  }
+  
