--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -1,8 +1,11 @@
-body {
-    background-color: #f8f9fa;
-  }
-
-  .profile-pic-container {
+#home-container{
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.profile-pic-container {
     position: relative;
     overflow: hidden;
     border-radius: 50%;
@@ -21,96 +24,25 @@ body {
   .profile-pic:hover {
     transform: scale(1.1);
   }
-
-  /* About Me paragraph */
-  .profile-paragraph {
-    /* max-width: 50%; */
-    width: 35rem;
-    height: 3rem;
-    /* min-height: 1%; */
-    margin: 5% auto;
-    padding: 1%;
-    background-color: #f0f0f0;
-    border-radius: 10%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    opacity: 0; /* Initial opacity set to 0 */
-    transition: opacity 1s ease-in-out; /* Transition effect for opacity */
-  }
-  
-  .profile-paragraph.show {
-    opacity: 1; /* Opacity set to 1 when the 'show' class is present */
-  }
-  
-  .profile-paragraph p {
-    font-size: 20px;
-    line-height: 2;
-    color: #333;
-  }
-  
-  /* Additional styling for the typing effect */
-  .react-typing-effect-cursor {
-    display: inline-block;
-    margin-left: 2px;
-    animation: blink 0.7s infinite;
-  }
-  
-  @keyframes blink {
-    0%, 100% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-  }
-  .special-container{
-    margin: 4em;
-    margin-top: 0;
-    margin-bottom: 0;
-    text-align: justify;
-    text-justify: inter-word;
-    padding: 10em;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
   .home-p{
     line-height: 200%;
+    text-align: justify;
+    font-size: 18px;
   }
-  .code-profile-div {
+
+  #home-container-paragraph{
+    justify-items: auto;
+    margin: 1%;
+  }
+  #profile-socials{
+    text-decoration: none;
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .profile-socials-item{
+    text-decoration: none;
     width: auto;
-    padding: 1%;
-    border: 2px solid #3f1960;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    animation: transform 1s ease-in-out;
-    transition: transform 0.3s ease-in-out, border-color 0.3s ease-in-out, border-style 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-}
-
-.code-profile-div:hover {
-    transform: scale(1.05);
-    border-color: #546f9a;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-@keyframes transform {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.1);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
-a.code-profile-div-anchor {
-  color: #3f1960;
-  text-decoration: none;
-  border-bottom: 2px solid transparent;
-  transition: color 0.3s ease-in-out, border-bottom-color 0.3s ease-in-out;
-}
-
-a.code-profile-div-anchor:hover {
-  color: #303842;
-}
-
-
+    margin: 1%;
+    margin-top: 0;
+  }
