--- a/src/components/styles/loadingscreen.css
+++ b/src/components/styles/loadingscreen.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
 }
-.loading-container{
+/* .loading-container{
     animation: fade 2s linear;
     transition: fade 2s ease-in-out;
 }
@@ -17,7 +17,7 @@
     100%{
         opacity: 0%;
     }
-}
+} */
 .loading-screen {
     display: flex;
     opacity: 1;
