--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -4,8 +4,8 @@
   padding-left: 2%;
   padding-right: 2%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  animation: home-fade 3s linear;
-  transition: home-fade 3s ease-in-out;
+  /* animation: home-fade 3s linear; */
+  /* transition: home-fade 3s ease-in-out; */
 }
 @keyframes home-fade{
   0%{
