--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -1,82 +1,16 @@
 #header-container{
-  background-color: #f8f9fa;
+  background-color:transparent;
+  justify-self: center;
+}  
+
+.MuiButtonGroup-contained {
+  margin-left: 1%;
+  margin-right: 1%
 }
-/* Style the navbar container */
-  .navbar-nav .nav-link {
-    margin: 0 15px;
-    font-size: 1.25rem;
-  }
-  .navbar-nav .nav-link.active {
-    border:none
-  }
-  #header-title{
-    color: #3498db;
-    text-decoration: none;
-    transition-property: color;
-    transition-duration: .5s;
-    transition-timing-function: ease-in-out;
-  }
-  #header-title:hover{
-    color: #e74c3c;
-  }
-  #header-title:focus{
-    text-decoration: underline;
-  }
 
-
-  #header-home{
-    padding: 0.5em;
-  }
-
-  .nav-item{
-    animation: transform 1s ease-in-out;
-    transition: transform 0.3s ease-in-out;
-  }
-  .nav-item:hover{
-    /* transform: scale(1.2); */
-  }
-  @keyframes transform {
-    0% {
-        /* transform: scale(1); */
-    }
-    50% {
-        /* transform: scale(1.1); */
-    }
-    100% {
-        /* transform: scale(1.2); */
-    }
+.MuiButtonGroup-contained .MuiButton-root {
+  margin: 0 2% 0 2%;
+  font-size: 0.875rem; /* Slightly smaller font size for elegance */
+  letter-spacing: 0.5px; /* Subtle letter spacing */
 }
-  .header-p{
-    animation: transform 1s ease-in-out;
-  }
-  .header-p:hover{
-    color: blue;
-  }
-  .header-container-home-link{
-    text-decoration: none;
-    color: black;
-    transition: transform 0.4s ease-in-out;
-    display: inline-block;
-  }
-  .header-container-home-link:hover{
-    /* transform: scale(1.1); */
-    color: rgb(52, 152, 219);
-  }
-  @media screen and (max-width:991px) {
-    #navbarSupportedContent{
-      width: auto;
-      height: auto;
-      position:absolute;
-      right: 2%;
-      top: 100%;
-      background-color: rgb(52, 152, 219,0.7);
-      font-size: small;
-      border-radius: 10px;
-      border-top-right-radius: 0;
-    }
-    .nav-link-item{
-      font-size: small;
-      color: white;
-    }
-  }
-  
+
