--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -69,4 +69,19 @@
     margin-left: 0;
   }
 
-  
+  #resume-dialog{
+    background-color: transparent;
+    /* opacity: 0.8; */
+    height: auto;
+    width: 80%;
+    /* justify-content: center; */
+    left: 10%;
+    top: 5%;
+    bottom: 5%;
+  }
+  #resume-dialog-header{
+    background-color: #e6cdcd;
+  }
+  #resume-dialog-content{
+    z-index: 3;
+  }
